<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/com_parse_ui_vertical_margin"
    android:paddingLeft="@dimen/com_parse_ui_horizontal_margin"
    android:paddingRight="@dimen/com_parse_ui_horizontal_margin"
    android:paddingBottom="@dimen/com_parse_ui_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    android:clickable="true"
    android:contextClickable="true"
    android:baselineAligned="true">

    <include
        layout="@layout/com_parse_ui_parse_login_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ParseLoginUI.TextView"
            android:text="@string/profile_title_logged_in"
            android:singleLine="true" />


        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ParseLoginUI.TextView" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ParseLoginUI.TextView" />

        <Button
            android:id="@+id/login_or_logout_button"
            style="@style/ParseLoginUI.Button"
            android:layout_marginTop="@dimen/com_parse_ui_large_vertical_spacing"
            android:text="@string/profile_logout_button_label"/>

        <TextView
            android:id="@+id/skip_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ParseLoginUI.TextView"
            android:text="@string/skip_now"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:linksClickable="true"
            android:textSize="15sp"
            android:typeface="serif"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>
